package comportamental.br.edu.ifs.designpatterns.iterator;

public interface Agregador {
    public Iterador criarIterador();
}
